# extension-helpers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.rst  azure-pipelines.yml  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: main.yml  publish.yml  update-changelog.yml
docs/: api.rst  basic.rst  conf.py  index.rst  openmp.rst  using.rst
extension_helpers/: __init__.py  _distutils_helpers.py  _openmp_helpers.py  _setup_helpers.py  _utils.py  conftest.py  setup_helpers.py  utils.py
extension_helpers/src/: compiler.c
extension_helpers/tests/: __init__.py  py311_backports.py  test_distutils_helpers.py  test_openmp_helpers.py  test_setup_helpers.py  test_utils.py
