[metadata]
name = extension-helpers
provides = extension_helpers
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/astropy/astropy-helpers
description = Utilities for building and installing packages with compiled extensions
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Setuptools Plugin
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
    setuptools

[options.package_data]
extension_helpers = src/compiler.c

[options.extras_require]
test =
    pytest
    pytest-cov
    coverage<5
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
norecursedirs =
    .tox
    extension_helpers/tests/package_template
python_functions = test_

[isort]
line_length = 100
sections = FUTURE,STDLIB,THIRDPARTY,NUMPY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = extension_helpers
known_numpy = numpy
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = false
length_sort_stdlib = true
